--- a/app/src/main/res/layout/my_video_fragment.xml
+++ b/app/src/main/res/layout/my_video_fragment.xml
@@ -5,10 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".MyVideoFragment">
+    tools:context=".myVideoPage.MyVideoFragment">
 
     <TextView
-        android:id="@+id/title_textView"
+        android:id="@+id/title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -20,41 +20,45 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/profile_imageView"
+        android:id="@+id/profile_iv"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:src="@drawable/ic_profile_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_textView"
+        app:layout_constraintTop_toBottomOf="@+id/title_tv"
         app:shapeAppearanceOverlay="@style/RoundedShapeAppearanceOverlay" />
 
     <TextView
-        android:id="@+id/profile_name"
+        android:id="@+id/profile_name_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/my_video_fragment_profile_name_demo"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile_imageView" />
+        app:layout_constraintTop_toBottomOf="@id/profile_iv" />
 
     <TextView
-        android:id="@+id/my_favorite_video_title_textView"
+        android:id="@+id/my_favorite_video_title_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/my_video_fragment_favorite_title_text"
         android:textColor="@color/white"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@id/title_textView"
-        app:layout_constraintTop_toBottomOf="@id/profile_name" />
+        app:layout_constraintStart_toStartOf="@id/title_tv"
+        app:layout_constraintTop_toBottomOf="@id/profile_name_tv" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/video_recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/my_favorite_video_title_textView"/>
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/my_favorite_video_title_tv"
+        app:layout_constraintTop_toBottomOf="@+id/my_favorite_video_title_tv" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
