--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <ScrollView
-        android:id="@+id/home_scrollview"
+        android:id="@+id/home_sv"
         android:layout_width="409dp"
         android:layout_height="729dp"
         app:layout_constraintBottom_toBottomOf="parent"
