--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -8,7 +8,6 @@
     android:orientation="vertical">
 
     <ScrollView
-        android:id="@+id/home_sv"
         android:layout_width="409dp"
         android:layout_height="729dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,13 +16,12 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
-            android:id="@+id/home_scrollview_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/home_banner_section_recyclerview"
+                android:id="@+id/rv_home_banner"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:orientation="horizontal"
@@ -34,12 +32,12 @@
                 android:layout_height="32dp" />
 
             <Spinner
-                android:id="@+id/home_section_spinner"
+                android:id="@+id/home_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/home_section1_recyclerview"
+                android:id="@+id/rv_home_section1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -57,7 +55,7 @@
                 android:textSize="24sp" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/home_section2_recyclerview"
+                android:id="@+id/rv_home_section2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
