--- a/app/src/main/res/layout/fragment_test2.xml
+++ b/app/src/main/res/layout/fragment_test2.xml
@@ -81,6 +81,17 @@
         app:layout_constraintStart_toEndOf="@+id/btn_cinema"
         app:layout_constraintTop_toBottomOf="@+id/et_search" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/video_recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="80dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_search" />
+
 
 
 
