--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0171EB</color>
+    <color name="red">#C71F1F</color>
+    <color name="grey">#494949</color>
 </resources>
