--- a/app/src/main/res/layout/video_detail_activity.xml
+++ b/app/src/main/res/layout/video_detail_activity.xml
@@ -82,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Like"
+        android:text="@string/detail_like_icon"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/btn_like"
         app:layout_constraintStart_toStartOf="@+id/btn_like"
@@ -93,7 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="My List"
+        android:text="@string/detail_mylist_icon"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/btn_add_mylist"
         app:layout_constraintStart_toStartOf="@+id/btn_add_mylist"
@@ -114,7 +114,7 @@
         android:layout_width="36dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="Share"
+        android:text="@string/detail_share_icon"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/btn_Share"
         app:layout_constraintStart_toStartOf="@+id/btn_Share"
