--- a/app/src/main/res/layout/my_video_fragment.xml
+++ b/app/src/main/res/layout/my_video_fragment.xml
@@ -8,7 +8,7 @@
     tools:context=".myVideoPage.MyVideoFragment">
 
     <TextView
-        android:id="@+id/title_tv"
+        android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -20,45 +20,45 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/profile_iv"
+        android:id="@+id/iv_profile"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:src="@drawable/ic_profile_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title_tv"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title"
         app:shapeAppearanceOverlay="@style/RoundedShapeAppearanceOverlay" />
 
     <TextView
-        android:id="@+id/profile_name_tv"
+        android:id="@+id/tv_profile_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/my_video_fragment_profile_name_demo"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile_iv" />
+        app:layout_constraintTop_toBottomOf="@id/iv_profile" />
 
     <TextView
-        android:id="@+id/my_favorite_video_title_tv"
+        android:id="@+id/tv_favorite_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="@string/my_video_fragment_favorite_title_text"
         android:textColor="@color/white"
         android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="@id/title_tv"
-        app:layout_constraintTop_toBottomOf="@id/profile_name_tv" />
+        app:layout_constraintStart_toStartOf="@id/tv_title"
+        app:layout_constraintTop_toBottomOf="@id/tv_profile_name" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/video_recyclerView"
+        android:id="@+id/rv_video"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/my_favorite_video_title_tv"
-        app:layout_constraintTop_toBottomOf="@+id/my_favorite_video_title_tv" />
+        app:layout_constraintStart_toStartOf="@id/tv_favorite_title"
+        app:layout_constraintTop_toBottomOf="@+id/tv_favorite_title" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
