--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/item_imageView"
+        android:id="@+id/iv_item"
         android:layout_width="150dp"
         android:layout_height="100dp"
         android:scaleType="fitXY"
@@ -14,15 +14,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/item_titleText"
+        android:id="@+id/tv_item"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/video_item_title_demo"
         android:textSize="14sp"
         android:maxLines="2"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="@+id/item_imageView"
-        app:layout_constraintStart_toStartOf="@+id/item_imageView"
-        app:layout_constraintTop_toBottomOf="@+id/item_imageView" />
+        app:layout_constraintEnd_toEndOf="@+id/iv_item"
+        app:layout_constraintStart_toStartOf="@+id/iv_item"
+        app:layout_constraintTop_toBottomOf="@+id/iv_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
