[REFACTOR] : ♻️ | Myvideo MVVM 적용
- Myvideo mvvm 적용

--- a/app/src/main/res/layout/home_banner_item.xml
+++ b/app/src/main/res/layout/home_banner_item.xml
@@ -16,6 +16,7 @@
         android:maxHeight="360dp"
         android:minHeight="301dp"
         android:scaleType="centerCrop"
+        android:src="@drawable/dog"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
