--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -9,8 +9,8 @@
         android:id="@+id/iv_item"
         android:layout_width="150dp"
         android:layout_height="100dp"
-        android:scaleType="fitXY"
-        android:src="@drawable/ic_launcher_background"
+        android:scaleType="centerCrop"
+        android:src="@drawable/dog"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
