--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/black">
 
-    <EditText
+    <androidx.appcompat.widget.SearchView
         android:id="@+id/et_search"
         android:layout_width="350dp"
         android:layout_height="51dp"
@@ -18,19 +18,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" >
+    </androidx.appcompat.widget.SearchView>
 
-    <ImageView
-        android:id="@+id/img_search"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/img_search"
-        app:layout_constraintBottom_toBottomOf="@+id/et_search"
-        app:layout_constraintEnd_toEndOf="@+id/et_search"
-        app:layout_constraintHorizontal_bias="0.064"
-        app:layout_constraintStart_toStartOf="@+id/et_search"
-        app:layout_constraintTop_toTopOf="@+id/et_search"
-        app:layout_constraintVertical_bias="0.518" />
+
+
 
     <Button
         android:id="@+id/btn_all"
@@ -86,12 +78,11 @@
         android:layout_height="0dp"
         android:layout_marginTop="80dp"
         android:scrollbars="vertical"
+        android:layout_marginLeft="35dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_search" />
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
