--- a/app/src/main/res/layout/video_detail_activity.xml
+++ b/app/src/main/res/layout/video_detail_activity.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".detail.VideoDetailActivity"
-    android:background="@color/black">
+    android:background="@color/black"
+    tools:context=".detail.VideoDetailActivity">
 
 
     <androidx.cardview.widget.CardView
