--- a/app/src/main/res/layout/video_item.xml
+++ b/app/src/main/res/layout/video_item.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/video"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/video">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_item"
         android:layout_width="150dp"
         android:layout_height="100dp"
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
         android:src="@drawable/dog"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -18,10 +18,10 @@
         android:id="@+id/tv_item"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/video_item_title_demo"
-        android:textSize="14sp"
         android:maxLines="2"
+        android:text="@string/video_item_title_demo"
         android:textColor="@color/white"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/iv_item"
         app:layout_constraintStart_toStartOf="@+id/iv_item"
         app:layout_constraintTop_toBottomOf="@+id/iv_item" />
