--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -25,7 +25,7 @@
 
 
     <Button
-        android:id="@+id/btn_all"
+        android:id="@+id/btn_date"
         android:layout_width="70dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -37,7 +37,7 @@
         app:layout_constraintTop_toBottomOf="@+id/et_search" />
 
     <Button
-        android:id="@+id/btn_music"
+        android:id="@+id/btn_rating"
         android:layout_width="90dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -45,11 +45,11 @@
         android:layout_marginStart="12dp"
         android:backgroundTint="@color/white"
         android:textColor="@color/black"
-        app:layout_constraintStart_toEndOf="@+id/btn_all"
+        app:layout_constraintStart_toEndOf="@+id/btn_date"
         app:layout_constraintTop_toBottomOf="@+id/et_search" />
 
     <Button
-        android:id="@+id/btn_cinema"
+        android:id="@+id/btn_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -57,11 +57,11 @@
         android:layout_marginStart="12dp"
         android:textColor="@color/black"
         android:backgroundTint="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/btn_music"
+        app:layout_constraintStart_toEndOf="@+id/btn_rating"
         app:layout_constraintTop_toBottomOf="@+id/et_search" />
 
     <Button
-        android:id="@+id/btn_kpop"
+        android:id="@+id/btn_count"
         android:layout_width="85dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -69,7 +69,7 @@
         android:layout_marginStart="12dp"
         android:textColor="@color/black"
         android:backgroundTint="@color/white"
-        app:layout_constraintStart_toEndOf="@+id/btn_cinema"
+        app:layout_constraintStart_toEndOf="@+id/btn_title"
         app:layout_constraintTop_toBottomOf="@+id/et_search" />
 
     <androidx.recyclerview.widget.RecyclerView
