--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -49,13 +49,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="32dp" />
 
-            <TextView
+            <Spinner
+                android:id="@+id/home_spinner2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:text="@string/home_channel_title"
-                android:textColor="@color/white"
-                android:textSize="24sp" />
+                android:layout_marginBottom="10dp" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_home_section2"
