--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,6 +25,7 @@
                 android:id="@+id/rv_home_banner"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
+                tools:listitem="@layout/home_banner_item"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
@@ -34,12 +35,14 @@
 
             <Spinner
                 android:id="@+id/home_spinner"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@color/white"
                 android:layout_marginBottom="10dp" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_home_section1"
+                tools:listitem="@layout/video_item"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
@@ -51,12 +54,14 @@
 
             <Spinner
                 android:id="@+id/home_spinner2"
-                android:layout_width="match_parent"
+                android:background="@color/white"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_home_section2"
+                tools:listitem="@layout/video_item"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
