--- a/app/src/main/res/layout/my_video_fragment.xml
+++ b/app/src/main/res/layout/my_video_fragment.xml
@@ -57,6 +57,9 @@
         android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        tools:listitem="@layout/video_item"
         app:layout_constraintStart_toStartOf="@id/tv_favorite_title"
         app:layout_constraintTop_toBottomOf="@+id/tv_favorite_title" />
 
