--- a/app/src/main/res/layout/video_detail_activity.xml
+++ b/app/src/main/res/layout/video_detail_activity.xml
@@ -124,6 +124,7 @@
         android:id="@+id/comment_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        tools:listitem="@layout/comment_item"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
