[Design] video item
- 비디오 아이템의 크기와 ui를 수정 했습니다.

--- a/app/src/main/res/layout/my_video_fragment.xml
+++ b/app/src/main/res/layout/my_video_fragment.xml
@@ -11,8 +11,8 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
         android:text="@string/my_video_fragment_title_text"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -44,9 +44,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="5dp"
         android:text="@string/my_video_fragment_favorite_title_text"
         android:textColor="@color/white"
         android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/rv_video"
         app:layout_constraintStart_toStartOf="@id/tv_title"
         app:layout_constraintTop_toBottomOf="@id/tv_profile_name" />
 
@@ -55,13 +57,13 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="10dp"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_favorite_title"
         app:spanCount="2"
-        tools:listitem="@layout/video_item"
-        app:layout_constraintStart_toStartOf="@id/tv_favorite_title"
-        app:layout_constraintTop_toBottomOf="@+id/tv_favorite_title" />
+        tools:listitem="@layout/video_item" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
