--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,10 +34,11 @@
                 android:layout_height="32dp" />
 
             <Spinner
+                android:layout_marginLeft="10dp"
                 android:id="@+id/home_spinner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
+                android:background="@drawable/spinner_selector"
                 android:layout_marginBottom="10dp" />
 
             <androidx.recyclerview.widget.RecyclerView
@@ -54,7 +55,8 @@
 
             <Spinner
                 android:id="@+id/home_spinner2"
-                android:background="@color/white"
+                android:layout_marginLeft="10dp"
+                android:background="@drawable/spinner_selector"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp" />
