--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -36,7 +36,7 @@
             <Spinner
                 android:layout_marginLeft="10dp"
                 android:id="@+id/home_spinner"
-                android:layout_width="wrap_content"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/spinner_selector"
                 android:layout_marginBottom="10dp" />
@@ -57,7 +57,7 @@
                 android:id="@+id/home_spinner2"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/spinner_selector"
-                android:layout_width="wrap_content"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp" />
 
