--- a/app/src/main/res/layout/home_spinner_item.xml
+++ b/app/src/main/res/layout/home_spinner_item.xml
@@ -7,4 +7,4 @@
     android:layout_height="wrap_content"
     android:padding="8dp"
     android:textSize="16sp"
-    android:textColor="@android:color/white" />
+    android:textColor="@android:color/black" />
