--- a/app/src/main/res/layout/my_video_fragment.xml
+++ b/app/src/main/res/layout/my_video_fragment.xml
@@ -65,5 +65,17 @@
         app:spanCount="2"
         tools:listitem="@layout/video_item" />
 
+    <TextView
+        android:id="@+id/tv_no_videos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="비디오가 없습니다."
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:visibility="gone"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
