--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,6 +41,7 @@
 
                 <me.relex.circleindicator.CircleIndicator2
                     android:id="@+id/indicator"
+                    android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_marginTop="175dp"
                     app:layout_constraintEnd_toEndOf="parent"
