--- a/app/src/main/res/layout/fragment_my_video.xml
+++ b/app/src/main/res/layout/fragment_my_video.xml
@@ -7,6 +7,15 @@
     android:background="@color/black"
     tools:context=".myVideoPage.MyVideoFragment">
 
+    <Button
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@drawable/ic_edit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
