edit dialog 만들기

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="blue">#0171EB</color>
     <color name="red">#C71F1F</color>
     <color name="grey">#494949</color>
+    <color name="green">#167A1A</color>
 </resources>
