--- a/app/src/main/res/drawable/ic_check.xml
+++ b/app/src/main/res/drawable/ic_check.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="128">
   <path
       android:pathData="M112.3,20.4c-3.2,3.5 -19.5,22.2 -36.3,41.4 -16.8,19.3 -31,35 -31.6,34.9 -0.6,-0.1 -8.6,-8.2 -17.8,-18 -14.3,-15.1 -17.2,-17.7 -19.7,-17.7 -3.5,-0 -6.9,3.1 -6.9,6.5 0,2.5 1.5,4.3 28.4,32.8 12.4,13.2 13.1,13.8 16.5,13.5 3.4,-0.3 6.1,-3.1 43.4,-45.7 25.9,-29.5 39.7,-46.1 39.7,-47.5 0,-3.8 -2.8,-6.6 -6.5,-6.6 -2.8,-0 -4.2,1 -9.2,6.4z"
-      android:fillColor="@color/white"
+      android:fillColor="@color/green"
       android:strokeColor="#00000000"/>
 </vector>
