[FIX] : SearchFragment Floating Button Visibility 수정

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -105,6 +105,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:maxImageSize="40dp"
         app:tint="@null"
+        android:visibility="invisible"
         tools:ignore="ContentDescription"/>
 
     <TextView
